# IncognitoPilot

./: .dockerignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: publish.yml
backend/: config.py  main.py  pyproject.toml
docker/: Dockerfile  Dockerfile_env_full  Dockerfile_env_slim  commands.txt  nginx.conf  requirements_full.txt  requirements_slim.txt  start.sh  start_interpreter.sh  start_llm.sh  start_services.sh  start_ui.sh
docs/: INSTALLATION_AZURE.md  INSTALLATION_LLAMA.md  architecture.drawio
interpreter/: ipython_interpreter.py  main.py  pyproject.toml  python_interpreter.py
interpreter/interpreter/: __init__.py  ipython_interpreter.py
interpreter/tests/: test_interpreter.py
services/: main.py  main_interpreter.py  main_llm.py  pyproject.toml
services/interpreter/: ipython_interpreter.py
services/llm/: __init__.py  base.py  gpt_openai.py  llama_replicate.py  selector.py  types.py
services/llm/gpt/: __init__.py  gpt.py  gpt_azure.py  gpt_openai.py  parsing.py
services/llm/llama/: __init__.py  llama_replicate.py  llama_tgi.py  parsing.py  prompt.py
services/services/auth/: __init__.py  origin.py  service.py  token.py  websocket.py  welcome.py
services/services/interpreter/: __init__.py  service.py
services/services/llm/: __init__.py  base.py  selector.py  service.py
services/services/llm/gpt/: gpt.py  gpt_azure.py  gpt_openai.py  parsing.py  prompt.py
services/services/llm/llama/: llama_replicate.py  llama_tgi.py  parsing.py
services/services/utils/: __init__.py  origin.py
services/tests/: test_interpreter.py
services/utils/: __init__.py  app.py  env_var.py
ui/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js
ui/app/: api_calls.tsx  approver.tsx  authentication.tsx  brand.tsx  chat_history.tsx  chat_input.tsx  chat_round.tsx  globals.css  header.tsx  interpreter_in.tsx  interpreter_io.tsx  interpreter_out.tsx  layout.tsx  page.tsx  running.tsx  services.ts  session-manager.tsx  session.tsx
ui/app/api/chat/: route.ts
ui/app/helper/: scroller.tsx
ui/app/session/: session.tsx  session_manager.tsx
ui/app/session/approval/: approver.tsx  interpreter_io.tsx  running.tsx
ui/app/session/chat/: brand.tsx  chat_history.tsx  chat_input.tsx  header.tsx
ui/app/session/communication/: api_calls.tsx  chat_round.tsx  interpreter.tsx  llm.tsx  message.tsx
ui/llm/: base.tsx  gpt4.tsx
