[tool.poetry]
name = "local-code-interpreter"
version = "0.1.0"
description = ""
authors = ["Silvan Melchior"]
license = "MIT"
readme = "README.md"
packages = [{include = "local_code_interpreter"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
openai = "^0.27.8"
confz = "^2.0.0"
uvicorn = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
