[tool.poetry]
name = "interpreter"
version = "0.1.0"
description = ""
authors = ["Silvan Melchior"]
license = "MIT"
readme = "README.md"
# packages = [{include = "interpreter"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
