[tool.poetry]
name = "interpreter"
version = "0.0.0"
description = ""
authors = ["Silvan Melchior"]
license = "MIT"
packages = [{include = "interpreter"}]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
websockets = "^11.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.14.0"
black = {extras = ["d"], version = "^23.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
